1) Renamed: Image->CameraImage; ImageSegMask->CameraImageSegMask; ImageDepth->CameraImageDepth. 2) Added TransformableSet and extended it for the above 3 types of transformables.

--- a/ipynb/unit_tests.ipynb
+++ b/ipynb/unit_tests.ipynb
@@ -317,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.dataset.transform import Image, Bbox3D"
+    "from src.dataset.transform import CameraImage, Bbox3D"
    ]
   },
   {
@@ -458,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_front = Image(img_data)"
+    "img_front = CameraImage(img_data)"
    ]
   },
   {
@@ -482,7 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "isinstance(img_front, Image)"
+    "isinstance(img_front, CameraImage)"
    ]
   },
   {
