Refactored: 1) change TransformableSet.transformable's type to dict and accept different input_args for each transformable. 2) renamed IntrinsicImage to ApplyIntrinsic; ExtrinsicImage to ApplyExtrinsic; 3) seeds no more needs dict type default values.

--- a/ipynb/unit_tests.ipynb
+++ b/ipynb/unit_tests.ipynb
@@ -149,7 +149,7 @@
    "outputs": [],
    "source": [
     "from prefusion.dataset.dataset import GroupBatchDataset\n",
-    "from prefusion.dataset.transform import IntrinsicImage, RandomExtrinsicImage, RandomImageISP, RandomRotationSpace"
+    "from prefusion.dataset.transform import ApplyIntrinsic, RandomApplyExtrinsic, RandomImageISP, RandomRotationSpace"
    ]
   },
   {
@@ -167,7 +167,7 @@
     "        'camera_images'\n",
     "    ],\n",
     "    transforms=[\n",
-    "        IntrinsicImage(\n",
+    "        ApplyIntrinsic(\n",
     "            resolutions=dict(\n",
     "                VCAMERA_FISHEYE_FRONT=(384, 224),\n",
     "                VCAMERA_FISHEYE_LEFT=(384, 224)\n",
