1. TENSOR_SMITHS as a Registery;\n 2. tensor_smith as a Callable, add some tensor_smiths;\n 3. implement a default to_tensor() for transformable, transformable has a self.tensor valued by tensor_smith;\n 4. minor modifications of Polyline3D and Bbox3D, self.polylines / self.boxes to self.elements, for unified expression of inherited transformables.

--- a/ipynb/unit_tests.ipynb
+++ b/ipynb/unit_tests.ipynb
@@ -1717,8 +1717,241 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'y'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 'Y'\n",
+    "a.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Callable\n",
+    "import warnings\n",
+    "\n",
+    "class Transformable:\n",
+    "\n",
+    "    def to_tensor(self):\n",
+    "        if not getattr(self, 'tensor_smith') or not callable(self.tensor_smith):\n",
+    "            warnings.warn('Please provide callable tensor_smith, self.tensor will be set to None.', UserWarning)\n",
+    "            self.tensor = None\n",
+    "        else:\n",
+    "            self.tensor = self.tensor_smith(self)\n",
+    "        \n",
+    "        if self.tensor is None:\n",
+    "            warnings.warn('self.tensor is None.', UserWarning)\n",
+    "        \n",
+    "        return self\n",
+    "\n",
+    "\n",
+    "class A(Transformable):\n",
+    "    def __init__(self, a, tensor_smith='123'):\n",
+    "        super().__init__()\n",
+    "        self.a = a\n",
+    "        self.tensor_smith = tensor_smith"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = A(a=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.A at 0x711d5422e250>"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_649510/3161511183.py:8: UserWarning: Please provide callable tensor_smith, self.tensor will be set to None\n",
+      "  warnings.warn('Please provide callable tensor_smith, self.tensor will be set to None', UserWarning)\n",
+      "/tmp/ipykernel_649510/3161511183.py:14: UserWarning: self.tensor is None\n",
+      "  warnings.warn('self.tensor is None', UserWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.A at 0x711d5422e250>"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.to_tensor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  1.,  0.],\n",
+       "       [ 0., -1.,  0.],\n",
+       "       [ 0.,  0.,  1.]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.eye(3)\n",
+    "arr[1, 1] = -1\n",
+    "arr[0, 1] = 1\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.trace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aaa = np.ones([3, 5, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "        [0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "        [0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "        [0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "        [0.5, 0.5, 0.5, 0.5, 0.5]],\n",
+       "\n",
+       "       [[0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "        [0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "        [0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "        [0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "        [0.5, 0.5, 0.5, 0.5, 0.5]],\n",
+       "\n",
+       "       [[0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "        [0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "        [0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "        [0.5, 0.5, 0.5, 0.5, 0.5],\n",
+       "        [0.5, 0.5, 0.5, 0.5, 0.5]]])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aaa / np.array([2, 2, 2])[..., None, None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "typing.Union[list, tuple]"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import Union\n",
+    "Union[list, tuple]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
