fix and add transform render tests.

--- a/ipynb/unit_tests.ipynb
+++ b/ipynb/unit_tests.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        " array([1.64080219, 0.05154541, 1.59953608]))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,13 +398,13 @@
     "\n",
     "transform(fisheye_image, perspective_image)\n",
     "fisheye_image.intrinsic, perspective_image.intrinsic\n",
-    "mmcv.imwrite(fisheye_image.img, 'test_fisheye_render_intrinsic_result.jpg')\n",
-    "mmcv.imwrite(perspective_image.img, 'test_perspective_render_intrinsic_result.jpg')"
+    "mmcv.imwrite(fisheye_image.img, 'test_fisheye_render_intrinsic_result.png')\n",
+    "mmcv.imwrite(perspective_image.img, 'test_perspective_render_intrinsic_result.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "  array([1.64080219, 0.05154541, 1.59953608])))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,8 +478,8 @@
     ")\n",
     "\n",
     "transform(fisheye_image, perspective_image)\n",
-    "mmcv.imwrite(fisheye_image.img, 'test_fisheye_render_extrinsic_result.jpg')\n",
-    "mmcv.imwrite(perspective_image.img, 'test_perspective_render_extrinsic_result.jpg')\n",
+    "mmcv.imwrite(fisheye_image.img, 'test_fisheye_render_extrinsic_result.png')\n",
+    "mmcv.imwrite(perspective_image.img, 'test_perspective_render_extrinsic_result.png')\n",
     "\n",
     "plt.imshow(fisheye_image.img); plt.show()\n",
     "plt.imshow(perspective_image.img); plt.show()\n",
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "  array([1.64080219, 0.05154541, 1.59953608])))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,8 +562,8 @@
     ")\n",
     "\n",
     "transform(fisheye_image, perspective_image, seeds={'frame': 520})\n",
-    "mmcv.imwrite(fisheye_image.img, 'test_fisheye_render_random_extrinsic_result.jpg')\n",
-    "mmcv.imwrite(perspective_image.img, 'test_perspective_render_random_extrinsic_result.jpg')\n",
+    "mmcv.imwrite(fisheye_image.img, 'test_fisheye_render_random_extrinsic_result.png')\n",
+    "mmcv.imwrite(perspective_image.img, 'test_perspective_render_random_extrinsic_result.png')\n",
     "\n",
     "plt.imshow(fisheye_image.img); plt.show()\n",
     "plt.imshow(perspective_image.img); plt.show()\n",
