fix render transforms; add parking_slot_3d tensor smith, not yet done.

--- a/ipynb/unit_tests.ipynb
+++ b/ipynb/unit_tests.ipynb
@@ -1607,18 +1607,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ll = range(20)\n",
-    "group_size=1\n",
-    "frame_interval=1"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ll = range(50)\n",
+    "group_size=5\n",
+    "frame_interval=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,11 +1650,575 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 11, 20, 21, 30, 31, 40, 41, 50]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "end_inds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n",
+      "[1, 3, 5, 7, 9]\n",
+      "[10, 12, 14, 16, 18]\n",
+      "[11, 13, 15, 17, 19]\n",
+      "[20, 22, 24, 26, 28]\n",
+      "[21, 23, 25, 27, 29]\n",
+      "[30, 32, 34, 36, 38]\n",
+      "[31, 33, 35, 37, 39]\n",
+      "[40, 42, 44, 46, 48]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for end_ind in end_inds:\n",
+    "    index_list = list(range(end_ind - group_interval, end_ind)[::frame_interval])\n",
+    "    print(index_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "end_inds"
+    "all_inds = np.arange(16)\n",
+    "\n",
+    "splits = all_inds[2::10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splits\n",
+    "if splits[0] == 0:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  4,  6,  8, 10],\n",
+       "       [ 3,  5,  7,  9, 11]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_inds[splits[0] : splits[1]].reshape(5, 2).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_inds = np.arange(16)\n",
+    "group_inds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0,  5, 10, 15]), array([ 0,  4,  8, 12]), array([ 1,  5,  9, 13]))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_inds[0::5], group_inds[::4], group_inds[1::4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 5)\n",
+      "(5, 10)\n",
+      "(10, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "splits = [5, 10]\n",
+    "splits.insert(0, splits[0] - 5)\n",
+    "splits.append(splits[-1] + 5)\n",
+    "splits\n",
+    "\n",
+    "for pair in zip(splits[:-1], splits[1:]):\n",
+    "    print(pair)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_groups(scene_length, group_size, frame_interval, start_ind=0, random_start_ind=False):\n",
+    "    \"\"\"\n",
+    "    Generate groups of frames from a scene.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    scene_length : int\n",
+    "        The total number of frames in the scene.\n",
+    "    group_size : int\n",
+    "        The number of frames in each group.\n",
+    "    frame_interval : int\n",
+    "        The interval between frames in each group.\n",
+    "    start_ind : int, optional\n",
+    "        The starting index of the first group. Default is 0.\n",
+    "    random_start_ind : bool, optional\n",
+    "        If True, randomly select the starting index of the first group. Default is False.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    groups : list of tuples\n",
+    "        A list of tuples, where each tuple represents a group of frames.\n",
+    "\n",
+    "    Notes\n",
+    "    -----\n",
+    "    - `group_interval = group_size * frame_interval`\n",
+    "    - `group_interval <= scene_length` \n",
+    "    - `start_ind` should be assigned between `[0, group_interval - 1]`\n",
+    "    - When the `start_ind > 0`, we should insert a group including `[0, start_ind)`\n",
+    "    - If the tail of the group, aka `end_ind`, is bigger than `scene_length - 1`, we should append a group including `(end_ind, scene_length]`\n",
+    "    \"\"\"\n",
+    "    group_inds = np.arange(scene_length)\n",
+    "    \n",
+    "    max_group_size = min(scene_length, group_size * frame_interval) // frame_interval\n",
+    "    group_interval = max_group_size * frame_interval\n",
+    "\n",
+    "    if random_start_ind:\n",
+    "        start_ind = random.randint(0, group_interval - 1)\n",
+    "    assert start_ind >= 0 and start_ind < group_interval\n",
+    "    splits = group_inds[start_ind::group_interval]\n",
+    "    # print(splits)\n",
+    "    # if splits[0] == 0 and len(splits) > 1:\n",
+    "    #     splits = splits[1:]\n",
+    "    if splits[-1] == scene_length:\n",
+    "        splits = splits[:-1]\n",
+    "    \n",
+    "    if splits[0] > 0:\n",
+    "        splits = np.insert(splits, 0, splits[0] - group_interval)\n",
+    "    splits = np.append(splits, splits[-1] + group_interval)\n",
+    "    # print(splits)\n",
+    "\n",
+    "    ind_lists = []\n",
+    "    for start, end in zip(splits[:-1], splits[1:]):\n",
+    "        if start < 0:\n",
+    "            start = 0\n",
+    "            end = group_interval\n",
+    "        if end >= scene_length:\n",
+    "            end = scene_length\n",
+    "            start = scene_length - group_interval\n",
+    "        # print(start, end)\n",
+    "        ind_list = group_inds[start:end].reshape(max_group_size, frame_interval).T\n",
+    "        ind_lists.extend(ind_list.tolist())\n",
+    "    \n",
+    "    return np.unique(ind_lists, axis=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 15\n",
+      "2 17\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  5, 10],\n",
+       "       [ 1,  6, 11],\n",
+       "       [ 2,  7, 12],\n",
+       "       [ 3,  8, 13],\n",
+       "       [ 4,  9, 14],\n",
+       "       [ 5, 10, 15],\n",
+       "       [ 6, 11, 16]])"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# gen_groups(16, 5, 1)\n",
+    "gen_groups(17, 20, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  5 10 15]\n",
+      "[ 0  5 10 15 20]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8,  9],\n",
+       "       [10, 11, 12, 13, 14],\n",
+       "       [11, 12, 13, 14, 15]])"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test one\n",
+    "# group_size = 5\n",
+    "# frame_interval = 1\n",
+    "# start_ind = 0\n",
+    "\n",
+    "answer = np.array(\n",
+    "    [[ 0,  1,  2,  3,  4],\n",
+    "     [ 5,  6,  7,  8,  9],\n",
+    "     [10, 11, 12, 13, 14],\n",
+    "     [11, 12, 13, 14, 15]]  # [15, 16, 17, 18, 19]]\n",
+    ")\n",
+    "\n",
+    "gen_groups(16, 5, 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[ 0 16]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  4,  8, 12],\n",
+       "       [ 1,  5,  9, 13],\n",
+       "       [ 2,  6, 10, 14],\n",
+       "       [ 3,  7, 11, 15]])"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test one_1\n",
+    "# group_size = 4\n",
+    "# frame_interval = 4\n",
+    "# start_ind = 0\n",
+    "\n",
+    "answer = np.array(\n",
+    "    [[0, 4,  8, 12],\n",
+    "     [1, 5,  9, 13],\n",
+    "     [2, 6, 10, 14],\n",
+    "     [3, 7, 11, 15]]\n",
+    ")\n",
+    "gen_groups(16, 4, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3  8 13]\n",
+      "[-2  3  8 13 18]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4],\n",
+       "       [ 3,  4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11, 12],\n",
+       "       [11, 12, 13, 14, 15]])"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test two\n",
+    "# group_size = 5\n",
+    "# frame_interval = 1\n",
+    "# random start_frame in [0, min(scene_len, group_interval)]\n",
+    "# start_ind = 3\n",
+    "\n",
+    "answer = np.array(\n",
+    "    [[ 0,  1,  2,  3,  4],  # [-2, -1,  0,  1,  2],\n",
+    "     [ 3,  4,  5,  6,  7],\n",
+    "     [ 8,  9, 10, 11, 12],\n",
+    "     [11, 12, 13, 14, 15]]  # [13, 14, 15, 16, 17]]\n",
+    ")\n",
+    "gen_groups(16, 5, 1, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 10]\n",
+      "[ 0 10 20]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  2,  4,  6,  8],\n",
+       "       [ 1,  3,  5,  7,  9],\n",
+       "       [ 6,  8, 10, 12, 14],\n",
+       "       [ 7,  9, 11, 13, 15]])"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test three\n",
+    "# group_size = 5\n",
+    "# frame_interval = 2\n",
+    "# start_ind = 0\n",
+    "\n",
+    "answer = np.array(\n",
+    "    [[ 0,  2,  4,  6,  8],\n",
+    "     [ 1,  3,  5,  7,  9],\n",
+    "     [ 6,  8, 10, 12, 14],\n",
+    "     [ 7,  9, 11, 13, 15]]\n",
+    ")\n",
+    "\n",
+    "gen_groups(16, 5, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4 14]\n",
+      "[-6  4 14 24]\n",
+      "0 10\n",
+      "4 14\n",
+      "6 16\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  2,  4,  6,  8],\n",
+       "       [ 1,  3,  5,  7,  9],\n",
+       "       [ 4,  6,  8, 10, 12],\n",
+       "       [ 5,  7,  9, 11, 13],\n",
+       "       [ 6,  8, 10, 12, 14],\n",
+       "       [ 7,  9, 11, 13, 15]])"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test four\n",
+    "# group_size = 5\n",
+    "# frame_interval = 2\n",
+    "# random start_ind in [0, min(scene_len, group_interval)]\n",
+    "# start_ind = 4\n",
+    "\n",
+    "# splits 4, 14\n",
+    "# [-6, 4], [4, 14], [14, 24]\n",
+    "# [0, 10], [4, 14], [5, 15]\n",
+    "\n",
+    "answer = np.array(\n",
+    "    [[ 0,  2,  4,  6,  8],\n",
+    "     [ 1,  3,  5,  7,  9],\n",
+    "     [ 4,  6,  8, 10, 12],\n",
+    "     [ 5,  7,  9, 11, 13],\n",
+    "     [ 6,  8, 10, 12, 14],\n",
+    "     [ 7,  9, 11, 13, 15]]\n",
+    ")\n",
+    "\n",
+    "gen_groups(16, 5, 2, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 10\n",
+      "6 16\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  2,  4,  6,  8],\n",
+       "       [ 1,  3,  5,  7,  9],\n",
+       "       [ 6,  8, 10, 12, 14],\n",
+       "       [ 7,  9, 11, 13, 15]])"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test four.1\n",
+    "# group_size = 5\n",
+    "# frame_interval = 2\n",
+    "# max_group_size = min(scene_length, group_size * frame_interval) // frame_interval\n",
+    "# val_group_interval = max_group_size * frame_interval\n",
+    "# random start_frame in [0, valid_group_interval]\n",
+    "# start_frame = 9\n",
+    "\n",
+    "answer = np.array(\n",
+    "    [[0, 2,  4,  6,  8],\n",
+    "     [1, 3,  5,  7,  9],\n",
+    "     [6, 8, 10, 12, 14],\n",
+    "     [7, 9, 11, 13, 15]]\n",
+    ")\n",
+    "gen_groups(16, 5, 2, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[ 0 16]\n",
+      "0 16\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  2,  4,  6,  8, 10, 12, 14],\n",
+       "       [ 1,  3,  5,  7,  9, 11, 13, 15]])"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test five\n",
+    "# group_size = 10\n",
+    "# frame_interval = 2\n",
+    "# start_frame = 0\n",
+    "\n",
+    "answer = np.array(\n",
+    "    [[0, 2, 4, 6, 8, 10, 12, 14],  # [0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n",
+    "     [1, 3, 5, 7, 9, 11, 13, 15]]  # [1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+    ")\n",
+    "\n",
+    "gen_groups(16, 10, 2)"
    ]
   },
   {
@@ -1653,11 +2226,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for end_ind in end_inds:\n",
-    "    index_list = list(range(end_ind - group_interval, end_ind)[::frame_interval])\n",
-    "    print(index_list)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
